--- a/.env
+++ b/.env
@@ -7,6 +7,6 @@ DEBUG=False
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 DATABASE_USER=postgres
-DATABASE_PASSWORD=postgres
+DATABASE_PASSWORD="   "
 DATABASE_NAME=wealthy_db
 
